<resources>
    <string name="app_name">ccpvirus</string>
    <string name="catch_picture">Catch picture</string>
    <string name="catch_color">Catch</string>
    <string name="Circle_size">Setting Circle size</string>
    <string name="Rectancle_size">Setting rectangle size and orientation</string>
    <string name="Setting_Rows">Set the number of rows</string>
    <string name="Setting_Column">Set the number of columns</string>
    <string name="x_axis_space">Circle row height:↕</string>
    <string name="circle_yxis_space">Circle Column width:↔ </string>
    <string name="move_row_up_down">Move row: ↑↓</string>
    <string name="move_row_left_right">Move row: ← →</string>
    <string name="move_col_left_right">Move column:← →</string>
    <string name="move_col_up_down">Move column:↑↓</string>
    <string name="save_parameters">Save Settings</string>
    <string name="retake">reTake</string>
    <string name="vertical">vertical</string>
    <string name="horizontal">horizontal</string>
    <string name="color_palette">Color Board</string>
    <string name="automatic">AUTO-PICK</string>
    <string name="manual">manual</string>
    <string name="orange2yellow">11:Orange ⇄ Yellow:11</string>
    <string name="yellow2green">40:Yellow ⇄ Green:40</string>
    <string name="cyan2blue">78:Cyan⇄Blue:78</string>
    <string name="blue2purple">120:Blue⇄Purple:120</string>
    <string name="red2orange">6:Red⇄Orange:6</string>
    <string name="red">165:Purple⇄Red:165</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sele">Select assy:</string>
    <string name="enname">Please enter name.</string>
    <string name="txet1">Select assay:</string>
    <string name="text2">Name of technologist:</string>
    <string name="name">Please enter name.</string>
    <string name="text3">Date and Time:</string>
    <string name="Aut">(Automatically delected)</string>
    <string name="btncan">Cancel</string>
    <string name="btnnext">Next</string>
    <string name="host" />
    <string name="t1">Select assay:</string>
    <string name="textassay">Select assay:</string>
    <string name="saplain" />
    <string name="nameText">Name of technologist:</string>
    <string name="dataText">Date and Time</string>
    <string name="deText">(Automatically delected)</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnNext">Next</string>
    <string name="titleSet">Setup New Run</string>
    <string-array name="spingarr">
        <item></item>
        <item>SARS-CoV-2 </item>
    </string-array>
    <color name="spingarr">#748751</color>
</resources>
