<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.opencv.android.JavaCameraView
        android:id="@+id/javaCameraView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:camera_id="any"
        app:show_fps="false" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rectancle_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <GridLayout
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:rowCount="2"
            android:columnCount="2">
            <Button
                android:id="@+id/btnup"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_column="0"
                android:layout_row="0"
                android:text="↑" />
            <Button
                android:id="@+id/btnDown"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_margin="0dp"
                android:text="↓" />
            <Button
                android:id="@+id/btnLeft"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_column="1"
                android:layout_row="0"
                android:text="←" />
            <Button
                android:id="@+id/btnRight"
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_column="1"
                android:layout_row="1"
                android:text="→" />
        </GridLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:useDefaultMargins="false"
            android:rowCount="2"
            android:columnCount="2">
            <Button
                android:id="@+id/btnHeightMax"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="0"
                android:text="↕" />
            <Button
                android:id="@+id/btnWidthMax"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_column="0"
                android:layout_row="1"
                android:text="↔" />
            <Button
                android:id="@+id/btnWidthMin"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_row="0"
                android:text="W↓" />

            <Button
                android:id="@+id/btnHeightMin"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_column="1"
                android:layout_row="1"
                android:text="H↓" />
        </GridLayout>
        <Button
            android:id="@+id/btnTakePhone"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="TakePhone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setting_Rows" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnRowMin"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Min"/>
            <EditText
                android:id="@+id/edtRow"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:gravity="center"
                android:enabled="false"
                android:text="12" />
            <Button
                android:id="@+id/btnRowMax"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Max"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Setting_Column"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnColMin"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Min"/>
            <EditText
                android:id="@+id/edtCol"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:gravity="center"
                android:enabled="false"
                android:text="12" />
            <Button
                android:id="@+id/btnColMax"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="Max"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x_axis_space"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnMixCircleRowSpacing"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="Mix">
                </Button>
                <EditText
                    android:id="@+id/circleRowSpacing"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:gravity="center"
                    android:enabled="false"
                    android:text="30">
                </EditText>
                <Button
                    android:id="@+id/btnMaxCircleRowSpacing"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="Max">
                </Button>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circle_yxis_space"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnMixCircleColSpacing"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="Mix">
                </Button>
                <EditText
                    android:id="@+id/circleColSpacing"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:gravity="center"
                    android:enabled="false"
                    android:text="30">
                </EditText>
                <Button
                    android:id="@+id/btnMaxCircleColSpacing"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="Max">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Circle_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/btnCicleMin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="Min"/>
        <EditText
            android:id="@+id/edtRadius"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:inputType="number"
            android:gravity="center"
            android:enabled="false"
            android:text="12" />
        <Button
            android:id="@+id/btnCicleMax"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Max"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>