<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <tech.huqi.smartopencv.core.preview.CameraPreview
            android:id="@+id/javaCameraView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:camera_id="any"
            app:show_fps="false" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#000000"
            android:paddingTop="5dp">
            <com.beijingepidial.ccpvirus.LevelView
                android:id="@+id/gv_hv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                app:bubbleColor="#e03524"
                app:bubbleRadius="10dp"
                app:bubbleRuleColor="#ffffff"
                app:bubbleRuleRadius="12dp"
                app:bubbleRuleWidth="1dp"
                app:limitCircleWidth="3dp"
                app:limitColor="#e03524"
                app:limitRadius="20dp"
                app:horizontalColor="#00ff00"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:padding="5dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/tvv_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_horizontal"
                        android:text="vert"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvl_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvv_vertical"
                        android:layout_centerHorizontal="true"
                        android:text="@string/vertical"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="10sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0.5">
                    <TextView
                        android:id="@+id/tvv_horz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_horizontal"
                        android:text="horiz"
                        android:textColor="#fff"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/tvl_horz"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvv_horz"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_horizontal"
                        android:text="@string/horizontal"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="PICK-SIZE:"/>
            <EditText
                android:id="@+id/edtGridsize"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:textSize="14dp"
                android:inputType="number"
                android:gravity="center"
                android:text="96"/>
            <TextView
                android:id="@+id/tvmsg"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <FrameLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <com.duan.colorpicker.ColorPickerView
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            app:indicatorEnable="false"
                            app:indicatorColor="#fff"
                            app:orientation="horizontal" />
                        <com.innovattic.rangeseekbar.RangeSeekBar
                            android:id="@+id/skA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:rsb_minRange="2"
                            app:rsb_sidePadding="10dp"
                            app:rsb_initialMaxThumbValue="20"
                            app:rsb_max="180"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <com.duan.colorpicker.ColorPickerView
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            app:indicatorEnable="false"
                            app:indicatorColor="#fff"
                            app:orientation="horizontal" />
                        <com.innovattic.rangeseekbar.RangeSeekBar
                            android:id="@+id/skB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:rsb_minRange="2"
                            app:rsb_sidePadding="10dp"
                            app:rsb_initialMinThumbValue="156"
                            app:rsb_initialMaxThumbValue="180"
                            app:rsb_max="180"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <com.duan.colorpicker.ColorPickerView
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            app:indicatorEnable="false"
                            app:indicatorColor="#fff"
                            app:orientation="horizontal" />
                        <com.innovattic.rangeseekbar.RangeSeekBar
                            android:id="@+id/skC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:rsb_minRange="2"
                            app:rsb_sidePadding="10dp"
                            app:rsb_initialMinThumbValue="20"
                            app:rsb_initialMaxThumbValue="30"
                            app:rsb_max="180"/>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">
                        <com.duan.colorpicker.ColorPickerView
                            android:layout_width="match_parent"
                            android:layout_height="10dp"
                            app:indicatorEnable="false"
                            app:indicatorColor="#fff"
                            app:orientation="horizontal" />
                        <com.innovattic.rangeseekbar.RangeSeekBar
                            android:id="@+id/skD"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:rsb_minRange="2"
                            app:rsb_sidePadding="10dp"
                            app:rsb_initialMinThumbValue="75"
                            app:rsb_initialMaxThumbValue="115"
                            app:rsb_max="180"/>
                    </FrameLayout>
                </LinearLayout>
                <androidx.percentlayout.widget.PercentFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <androidx.percentlayout.widget.PercentRelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_widthPercent="100%"
                        app:layout_heightPercent="100%">
                        <Button
                            android:id="@+id/btnCatchColor"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_widthPercent="50%"
                            app:layout_heightPercent="100%"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/catch_color" />
                        <Button
                            android:id="@+id/btnReTake"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_widthPercent="50%"
                            app:layout_heightPercent="100%"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:text="@string/retake" />
                    </androidx.percentlayout.widget.PercentRelativeLayout>
                </androidx.percentlayout.widget.PercentFrameLayout>

                <LinearLayout
                    android:id="@+id/lysetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <androidx.percentlayout.widget.PercentRelativeLayout
                        android:id="@+id/LayoutColorPal"
                        android:layout_width="match_parent"
                        android:layout_height="225dp"
                        android:layout_weight="1"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/tvColorPal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:text="@string/color_palette"/>
                        <LinearLayout
                            android:layout_below="@+id/tvColorPal"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_heightPercent="100%"
                            app:layout_widthPercent="98%"
                            android:layout_centerHorizontal="true"
                            android:orientation="vertical">
                            <SurfaceView
                                android:id="@+id/svColorPlate"
                                android:layout_width="match_parent"
                                android:layout_height="160dp" />
                            <Button
                                android:id="@+id/btnSave"
                                android:background="@drawable/button"
                                android:textStyle="bold"
                                android:textColor="#ffffff"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:text="SAVE" />
                        </LinearLayout>
                    </androidx.percentlayout.widget.PercentRelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>